--- a/bbt.bib
+++ b/bbt.bib
@@ -127,8 +127,7 @@
   pages     = {093021},
   doi       = {10.1088/1367-2630/16/9/093021},
   abstract  = {The ZX-calculus is a graphical calculus for reasoning about quantum systems and processes. It is known to be universal for pure state qubit quantum mechanics (QM), meaning any pure state, unitary operation and post-selected pure projective measurement can be expressed in the ZX-calculus. The calculus is also sound, i.e. any equality that can be derived graphically can also be derived using matrix mechanics. Here, we show that the ZX-calculus is complete for pure qubit stabilizer QM, meaning any equality that can be derived using matrices can also be derived pictorially. The proof relies on bringing diagrams into a normal form based on graph states and local Clifford operations.},
-  keywords  = {quantum foundations, quantum computing, logic, graphical calculus,
-  stabilizer quantum mechanics, graph states}
+  keywords  = {quantum foundations, quantum computing, logic, graphical calculus, stabilizer quantum mechanics, graph states}
 }
 
 @inproceedings{Badescu2015,
@@ -614,19 +613,20 @@
 }
 
 @inproceedings{Huang2019,
-  title =	{{QDB: From Quantum Algorithms Towards Correct Quantum Programs}},
-  author =	{Huang, Yipeng and Martonosi, Margaret},
-  year =	{2019},
-  month = jan,
-  booktitle =	{9th Workshop on Evaluation and Usability of Programming  Languages and Tools (PLATEAU 2018)},
-  editor =	{Titus Barik and Joshua Sunshine and Sarah Chasins},
-  publisher =	{Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
-  address =	{Dagstuhl, Germany},
-  series =	{OpenAccess Series in Informatics (OASIcs)},
-  volume =	{67},
-  pages =	{4:1--4:14},
-  doi =		{10.4230/OASIcs.PLATEAU.2018.4},
-  keywords =	{correctness, debugging}
+  title     = {{QDB: From Quantum Algorithms Towards Correct Quantum Programs}},
+  author    = {Huang, Yipeng and Martonosi, Margaret},
+  year      = {2019},
+  month     = jan,
+  booktitle = {9th Workshop on Evaluation and Usability of Programming  Languages and Tools (PLATEAU 2018)},
+  editor    = {Titus Barik and Joshua Sunshine and Sarah Chasins},
+  publisher = {Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  address   = {Dagstuhl, Germany},
+  series    = {OpenAccess Series in Informatics (OASIcs)},
+  volume    = {67},
+  pages     = {4:1--4:14},
+  doi       = {10.4230/OASIcs.PLATEAU.2018.4},
+  abstract  = {With the advent of small-scale prototype quantum computers, researchers can now code and run quantum algorithms that were previously proposed but not fully implemented. In support of this growing interest in quantum computing experimentation, programmers need new tools and techniques to write and debug QC code. In this work, we implement a range of QC algorithms and programs in order to discover what types of bugs occur and what defenses against those bugs are possible in QC programs. We conduct our study by running small-sized QC programs in QC simulators in order to replicate published results in QC implementations. Where possible, we cross-validate results from programs written in different QC languages for the same problems and inputs. Drawing on this experience, we provide a taxonomy for QC bugs, and we propose QC language features that would aid in writing correct code.},
+  keywords  = {correctness, debugging}
 }
 
 @techreport{JavadiAbhari2012,
@@ -638,9 +638,9 @@
   url         = {https://www.cs.princeton.edu/research/techreps/TR-934-12},
   abstract    = {Quantum computing is of significant research interest because of its potential to radically alter the performance and asymptotic complexity of certain computations. Over the years, physicists have explored possibilities for how to implement quantum bits and logic devices in hardware. At a higher level, mathematicians and algorithmicists have explored how to express computational problems from diverse fields---such as cryptography, chemical systems simulation, and database search---in terms of mathematical equations potentially implementable in quantum hardware.
 
-		For quantum computing to become potentially viable however, research must also make inroads regarding the implementation, compilation, and architectural issues that lie between high-level mathematical algorithm expressions and low-level physical implementations. In particular, we need tools and analysis techniques that can---for a given algorithm and potential physical implementation technology---answer questions like: how much would it cost (i.e., how much resource in terms of qubits, gates, time are required?) to implement the algorithm in this technology? What is its performance potential? Is it scalable? Are there more algorithms that offer such speedups over classical computers?
+                 For quantum computing to become potentially viable however, research must also make inroads regarding the implementation, compilation, and architectural issues that lie between high-level mathematical algorithm expressions and low-level physical implementations. In particular, we need tools and analysis techniques that can---for a given algorithm and potential physical implementation technology---answer questions like: how much would it cost (i.e., how much resource in terms of qubits, gates, time are required?) to implement the algorithm in this technology? What is its performance potential? Is it scalable? Are there more algorithms that offer such speedups over classical computers?
 
-		Our work is building a language and toolflow to answer such questions. This document describes the Scaffold programming language, its design goals, and related tools. Scaffold is a programming language for expressing quantum algorithms. A quantum algorithm can consist of a wide variety of components (including classical and quantum routines) which will be defined using different coding techniques. As a quantum programming language (QPL), Scaffold was formulated to make it easy to express an algorithm with so many disparate components in a clean and efficient manner. It is from this notion of "putting things together" that Scaffold derives its name.}
+                 Our work is building a language and toolflow to answer such questions. This document describes the Scaffold programming language, its design goals, and related tools. Scaffold is a programming language for expressing quantum algorithms. A quantum algorithm can consist of a wide variety of components (including classical and quantum routines) which will be defined using different coding techniques. As a quantum programming language (QPL), Scaffold was formulated to make it easy to express an algorithm with so many disparate components in a clean and efficient manner. It is from this notion of "putting things together" that Scaffold derives its name.}
 }
 
 @article{JavadiAbhari2015,
@@ -667,6 +667,21 @@
   abstract      = {We consider a programming language that can manipulate both classical and quantum information. Our language is type-safe and designed for variational quantum programming, which is a hybrid classical-quantum computational paradigm. The classical subsystem of the language is the Probabilistic FixPoint Calculus (PFPC), which is a lambda calculus with mixed-variance recursive types, term recursion and probabilistic choice. The quantum subsystem is a first-order linear type system that can manipulate quantum information. The two subsystems are related by mixed classical/quantum terms that specify how classical probabilistic effects are induced by quantum measurements, and conversely, how classical (probabilistic) programs can influence the quantum dynamics. We also describe a sound and computationally adequate denotational semantics for the language. Classical probabilistic effects are interpreted using a recently-described commutative probabilistic monad on DCPO. Quantum effects and resources are interpreted in a category of von Neumann algebras that we show is enriched over (continuous) domains. This strong sense of enrichment allows us to develop novel semantic methods that we use to interpret the relationship between the quantum and classical probabilistic effects. By doing so we provide the first denotational analysis that relates models of classical probabilistic programming to models of quantum programming.},
   keywords      = {Quantum Programming, Probabilistic Programming, Semantics},
   note          = {To appear at POPL 2022 as "Semantics for Probabilistic and Quantum Effects"}
+}
+
+@incollection{Jorrand2009,
+  title     = {Abstract Interpretation Techniques for Quantum Computation},
+  author    = {Jorrand, Philippe and Perdrix, Simon},
+  year      = {2009},
+  month     = nov,
+  booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  editor    = {Gay, Simon J. and Mackie, Ian},
+  publisher = {{Cambridge University Press}},
+  address   = {{Cambridge}},
+  pages     = {206--234},
+  crossref  = {Gay2009},
+  doi       = {10.1017/CBO9781139193313.007},
+  abstract  = {In this chapter, we present applications of abstract interpretation techniques in quantum computing. Quantum computing is a now well-established domain of computer science, and the recent developments of semantic techniques show the vitality of this rapidly growing area. On the other hand, the proof has been made that abstract interpretation is a powerful theory (of "classical" computer science) for comparing more or less precise semantics of the same programming language. In a more general picture, abstract interpretation can be seen as a framework for comparing the precision of several representations of the same dynamic system evolution. In this paper, we point out that abstract interpretation can be fruitfully used in quantum computing: (i) for establishing a hierarchy of quantum semantics and (ii) for analyzing entanglement evolution.}
 }
 
 @misc{Kaarsgaard2021,
@@ -741,20 +756,7 @@
   pages    = {35},
   numpages = {29},
   doi      = {10.1145/3158123},
-  abstract = {We introduce the notion of linear ranking super-martingale (LRSM) for quantum programs
-(with nondeterministic choices, namely angelic and demonic choices). Several termination
-theorems are established showing that the existence of the LRSMs of a quantum program
-implies its termination. Thus, the termination problems of quantum programs is reduced
-to realisability and synthesis of LRSMs. We further show that the realisability and
-synthesis problem of LRSMs for quantum programs can be reduced to an SDP (Semi-Definite
-Programming) problem, which can be settled with the existing SDP solvers. The techniques
-developed in this paper are used to analyse the termination of several example quantum
-programs, including quantum random walks and quantum Bernoulli factory for random
-number generation. This work is essentially a generalisation of constraint-based approach
-to the corresponding problems for probabilistic programs developed in the recent literature
-by adding two novel ideas: (1) employing the fundamental Gleason's theorem in quantum
-mechanics to guide the choices of templates; and (2) a generalised Farkas' lemma in
-terms of observables (Hermitian operators) in quantum physics.},
+  abstract = {We introduce the notion of linear ranking super-martingale (LRSM) for quantum programs (with nondeterministic choices, namely angelic and demonic choices). Several termination theorems are established showing that the existence of the LRSMs of a quantum program implies its termination. Thus, the termination problems of quantum programs is reduced to realisability and synthesis of LRSMs. We further show that the realisability and synthesis problem of LRSMs for quantum programs can be reduced to an SDP (Semi-Definite Programming) problem, which can be settled with the existing SDP solvers. The techniques developed in this paper are used to analyse the termination of several example quantum programs, including quantum random walks and quantum Bernoulli factory for random number generation. This work is essentially a generalisation of constraint-based approach to the corresponding problems for probabilistic programs developed in the recent literature by adding two novel ideas: (1) employing the fundamental Gleason's theorem in quantum mechanics to guide the choices of templates; and (2) a generalised Farkas' lemma in terms of observables (Hermitian operators) in quantum physics.},
   keywords = {SDP (Semi-Definite Programming), quantum Bernoulli factory, quantum programming, quantum random walk, ranking function, super-martingale, termination}
 }
 
@@ -769,21 +771,7 @@ terms of observables (Hermitian operators) in quantum physics.},
   pages    = {150},
   numpages = {29},
   doi      = {10.1145/3428218},
-  abstract = {In this paper, we propose Proq, a runtime assertion scheme for testing and debugging
-quantum programs on a quantum computer. The predicates in Proq are represented by
-projections (or equivalently, closed subspaces of the state space), following Birkhoff-von
-Neumann quantum logic. The satisfaction of a projection by a quantum state can be
-directly checked upon a small number of projective measurements rather than a large
-number of repeated executions. On the theory side, we rigorously prove that checking
-projection-based assertions can help locate bugs or statistically assure that the
-semantic function of the tested program is close to what we expect, for both exact
-and approximate quantum programs. On the practice side, we consider hardware constraints
-and introduce several techniques to transform the assertions, making them directly
-executable on the measurement-restricted quantum computers. We also propose to achieve
-simplified assertion implementation using local projection technique with soundness
-guaranteed. We compare Proq with existing quantum program assertions and demonstrate
-the effectiveness and efficiency of Proq by its applications to assert two sophisticated
-quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
+  abstract = {In this paper, we propose Proq, a runtime assertion scheme for testing and debugging quantum programs on a quantum computer. The predicates in Proq are represented by projections (or equivalently, closed subspaces of the state space), following Birkhoff-von Neumann quantum logic. The satisfaction of a projection by a quantum state can be directly checked upon a small number of projective measurements rather than a large number of repeated executions. On the theory side, we rigorously prove that checking projection-based assertions can help locate bugs or statistically assure that the semantic function of the tested program is close to what we expect, for both exact and approximate quantum programs. On the practice side, we consider hardware constraints and introduce several techniques to transform the assertions, making them directly executable on the measurement-restricted quantum computers. We also propose to achieve simplified assertion implementation using local projection technique with soundness guaranteed. We compare Proq with existing quantum program assertions and demonstrate the effectiveness and efficiency of Proq by its applications to assert two sophisticated quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 }
 
 @inproceedings{Lindenhovius2018,
@@ -943,7 +931,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   url       = {https://jpaykin.github.io/papers/prz_qwire_2017.pdf},
   abstract  = {This paper introduces QWIRE ("choir"), a language for defining quantum circuits and an interface for manipulating them inside of an arbitrary classical host language. QWIRE is minimal---it contains only a few primitives---and sound with respect to the physical properties entailed by quantum mechanics. At the same time, QWIRE is expressive and highly modular due to its relationship with the host language, mirroring the QRAM model of computation that places a quantum computer (controlled by circuits) alongside a classical computer (controlled by the host language).
 
-		We present QWIRE along with its type system and operational semantics, which we prove is safe and strongly normalizing whenever the host language is. We give circuits a denotational semantics in terms of density matrices. Throughout, we investigate examples that demonstrate the expressive power of QWIRE, including extensions to the host language that (1) expose a general analysis framework for circuits, and (2) provide dependent types.}
+               We present QWIRE along with its type system and operational semantics, which we prove is safe and strongly normalizing whenever the host language is. We give circuits a denotational semantics in terms of density matrices. Throughout, we investigate examples that demonstrate the expressive power of QWIRE, including extensions to the host language that (1) expose a general analysis framework for circuits, and (2) provide dependent types.}
 }
 
 @phdthesis{Paykin2018,
@@ -956,9 +944,9 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   url      = {https://repository.upenn.edu/edissertations/2752/},
   abstract = {Domain-specific languages are often embedded inside of general-purpose host languages so that the embedded language can take advantage of host-language data structures, libraries, and tools. However, when the domain-specific language uses linear types, existing techniques for embedded languages fall short. Linear type systems, which have applications in a wide variety of programming domains including mutable state, I/O, concurrency, and quantum computing, can manipulate embedded non-linear data via the linear type !σ. However, prior work has not been able to produce linear embedded languages that have full and easy access to host-language data, libraries, and tools.
 
-  This dissertation proposes a new perspective on linear, embedded, domain-specific languages derived from the linear/non-linear (LNL) interpretation of linear logic. The LNL model consists of two distinct fragments---one with linear types and another with non-linear types---and provides a simple categorical interface between the two. This dissertation identifies the linear fragment with the linear embedded language and the non-linear fragment with the general-purpose host language.
+              This dissertation proposes a new perspective on linear, embedded, domain-specific languages derived from the linear/non-linear (LNL) interpretation of linear logic. The LNL model consists of two distinct fragments---one with linear types and another with non-linear types---and provides a simple categorical interface between the two. This dissertation identifies the linear fragment with the linear embedded language and the non-linear fragment with the general-purpose host language.
 
-  The effectiveness of this framework is illustrated via a number of examples, implemented in a variety of host languages. In Haskell, linear domain-specific languages using mutable state and concurrency can take advantage of the monad that arises from the LNL model. In Coq, the QWIRE quantum circuit language uses linearity to enforce the no-cloning axiom of quantum mechanics. In homotopy type theory, quantum transformations can be encoded as higher inductive types to simplify the presentation of a quantum equational theory. These examples serve as case studies that prove linear/non-linear type theory is a natural and expressive interface in which to embed linear domain-specific languages.},
+              The effectiveness of this framework is illustrated via a number of examples, implemented in a variety of host languages. In Haskell, linear domain-specific languages using mutable state and concurrency can take advantage of the monad that arises from the LNL model. In Coq, the QWIRE quantum circuit language uses linearity to enforce the no-cloning axiom of quantum mechanics. In homotopy type theory, quantum transformations can be encoded as higher inductive types to simplify the presentation of a quantum equational theory. These examples serve as case studies that prove linear/non-linear type theory is a natural and expressive interface in which to embed linear domain-specific languages.},
   note     = {Publicly Accessible Penn Dissertations. 2752.}
 }
 
@@ -1038,11 +1026,11 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   url      = {https://repository.upenn.edu/edissertations/3175},
   abstract = {The field of quantum mechanics predates computer science by at least ten years, the time between the publication of the Schrodinger equation and the Church-Turing thesis. It took another fifty years for Feynman to recognize that harnessing quantum mechanics is necessary to efficiently simulate physics and for David Deutsch to propose the quantum Turing machine. After thirty more years, we are finally getting close to the first general-purpose quantum computers based upon prototypes by IBM, Intel, Google and others.
 
-		While physicists and engineers have worked on building scalable quantum computers, theoretical computer scientists have made their own advances. Complexity theorists introduced quantum complexity classes like BQP and QMA; Shor and Grover developed their famous algorithms for factoring and unstructured search. Programming languages researchers pursued two main research directions: Small-scale languages like QPL and the quantum lambda-calculi for reasoning about quantum computation and large-scale languages like Quipper and Q\# for industrial-scale quantum software development. This thesis aims to unify these two threads while adding a third one: formal verification.
+              While physicists and engineers have worked on building scalable quantum computers, theoretical computer scientists have made their own advances. Complexity theorists introduced quantum complexity classes like BQP and QMA; Shor and Grover developed their famous algorithms for factoring and unstructured search. Programming languages researchers pursued two main research directions: Small-scale languages like QPL and the quantum lambda-calculi for reasoning about quantum computation and large-scale languages like Quipper and Q\# for industrial-scale quantum software development. This thesis aims to unify these two threads while adding a third one: formal verification.
 
-		We argue that quantum programs demand machine-checkable proofs of correctness. We justify this on the basis of the complexity of programs manipulating quantum states, the expense of running quantum programs, and the inapplicability of traditional debugging techniques to programs whose states cannot be examined. We further argue that the existing mathematical models of quantum computation make this an easier task than one could reasonably expect. In light of these observations we introduce QWIRE, a tool for writing verifiable, large scale quantum programs.
+              We argue that quantum programs demand machine-checkable proofs of correctness. We justify this on the basis of the complexity of programs manipulating quantum states, the expense of running quantum programs, and the inapplicability of traditional debugging techniques to programs whose states cannot be examined. We further argue that the existing mathematical models of quantum computation make this an easier task than one could reasonably expect. In light of these observations we introduce QWIRE, a tool for writing verifiable, large scale quantum programs.
 
-		QWIRE is not merely a language for writing and verifying quantum circuits: it is a verified circuit description language. This means that the semantics of QWIRE circuits are verified in the Coq proof assistant. We also implement verified abstractions, like ancilla management and reversible circuit compilation. Finally, we turn QWIRE and Coq's abilities outwards, towards verifying popular quantum algorithms like quantum teleportation. We argue that this tool provides a solid foundation for research into quantum programming languages and formal verification going forward.},
+              QWIRE is not merely a language for writing and verifying quantum circuits: it is a verified circuit description language. This means that the semantics of QWIRE circuits are verified in the Coq proof assistant. We also implement verified abstractions, like ancilla management and reversible circuit compilation. Finally, we turn QWIRE and Coq's abilities outwards, towards verifying popular quantum algorithms like quantum teleportation. We argue that this tool provides a solid foundation for research into quantum programming languages and formal verification going forward.},
   note     = {Publicly Accessible Penn Dissertations. 3175. See Ch. 3 for "A Brief History of Quantum Programming and Verification", which is an excellent recent survey of the area.}
 }
 
@@ -1142,9 +1130,9 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   url      = {https://dalspace.library.dal.ca/handle/10222/80771},
   abstract = {This thesis contains contributions to the mathematical foundations of quantum programming languages.
 
-  The likely arrival of scalable quantum computers in the not so distant future has resulted in a flurry of activity in the development of quantum programming languages. As in classical computing, the transition from a description of a quantum algorithm found in the literature to a hardware-specific set of instructions run on a quantum device is a complex process, prone to errors. This issue is exacerbated in the quantum setting not only by the complexity of quantum algorithms but also by the fragility of quantum information, which renders ineffective some of the classical techniques used to debug programs.
+              The likely arrival of scalable quantum computers in the not so distant future has resulted in a flurry of activity in the development of quantum programming languages. As in classical computing, the transition from a description of a quantum algorithm found in the literature to a hardware-specific set of instructions run on a quantum device is a complex process, prone to errors. This issue is exacerbated in the quantum setting not only by the complexity of quantum algorithms but also by the fragility of quantum information, which renders ineffective some of the classical techniques used to debug programs.
 
-  In this thesis, we contribute to the solution of some of these issues. We introduce Proto-Quipper-M, a new quantum  programming language designed to serve as a testbed for the research and development of sound mathematical semantics and reasoning techniques for quantum programs. We first present Proto-Quipper-M as a formalization of a fragment of Quipper, a high-level functional programming language for describing families of quantum circuits. In particular, we define Proto-Quipper-M as a simply-typed lambda calculus with a special type for quantum circuits and a strong type system designed to enforce linearity on quantum data, and thus prevent violations of the no-cloning property of quantum information. We endow ProtoQuipper-M with computational meaning via a big-step operational semantics and prove that the language is type-safe by showing that it enjoys the type-preservation and error-freeness properties. We also give Proto-Quipper-M a denotational semantics in a suitable class of monoidal categories and show that these categories give rise to linear-non-linear models in the sense of Benton, and thus models of intuitionistic linear logic. Finally, we crystallize the connection between the syntax and the semantics of the language by proving the soundness theorem for Proto-Quipper-M.},
+              In this thesis, we contribute to the solution of some of these issues. We introduce Proto-Quipper-M, a new quantum  programming language designed to serve as a testbed for the research and development of sound mathematical semantics and reasoning techniques for quantum programs. We first present Proto-Quipper-M as a formalization of a fragment of Quipper, a high-level functional programming language for describing families of quantum circuits. In particular, we define Proto-Quipper-M as a simply-typed lambda calculus with a special type for quantum circuits and a strong type system designed to enforce linearity on quantum data, and thus prevent violations of the no-cloning property of quantum information. We endow ProtoQuipper-M with computational meaning via a big-step operational semantics and prove that the language is type-safe by showing that it enjoys the type-preservation and error-freeness properties. We also give Proto-Quipper-M a denotational semantics in a suitable class of monoidal categories and show that these categories give rise to linear-non-linear models in the sense of Benton, and thus models of intuitionistic linear logic. Finally, we crystallize the connection between the syntax and the semantics of the language by proving the soundness theorem for Proto-Quipper-M.},
   keywords = {Quantum programming language, Categorical model, Quantum circuit, Proto-Quipper-M, Category theory, Quantum computing}
 }
 
@@ -1347,14 +1335,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   numpages  = {12},
   doi       = {10.1145/2676726.2676999},
   url       = {http://www.cs.ox.ac.uk/people/samuel.staton/papers/popl2015.pdf},
-  abstract  = {We develop a new framework of algebraic theories with linear parameters, and use it
-to analyze the equational reasoning principles of quantum computing and quantum programming
-languages. We use the framework as follows: we present a new elementary algebraic
-theory of quantum computation, built from unitary gates and measurement; we provide
-a completeness theorem or the elementary algebraic theory by relating it with a model
-from operator algebra; we extract an equational theory for a quantum programming language
-from the algebraic theory; we compare quantum computation with other local notions
-of computation by investigating variations on the algebraic theory.},
+  abstract  = {We develop a new framework of algebraic theories with linear parameters, and use it to analyze the equational reasoning principles of quantum computing and quantum programming languages. We use the framework as follows: we present a new elementary algebraic theory of quantum computation, built from unitary gates and measurement; we provide a completeness theorem or the elementary algebraic theory by relating it with a model from operator algebra; we extract an equational theory for a quantum programming language from the algebraic theory; we compare quantum computation with other local notions of computation by investigating variations on the algebraic theory.},
   keywords  = {monads, quantum computation, algebraic effects}
 }
 
@@ -1496,7 +1477,7 @@ of computation by investigating variations on the algebraic theory.},
 }
 
 @article{Ying2012,
-  title    = {Floyd--Hoare Logic for Quantum Programs},
+  title    = {Floyd--Hoare {Logic} for {Quantum} {Programs}},
   author   = {Ying, Mingsheng},
   year     = {2012},
   month    = jan,
@@ -1521,9 +1502,9 @@ of computation by investigating variations on the algebraic theory.},
   doi      = {10.1016/j.scico.2013.03.016},
   abstract = {This paper develops verification methodology for quantum programs, and the contribution of the paper is two-fold.
 
-		- Sharir, Pnueli and Hart [M. Sharir, A. Pnueli, S. Hart, Verification of probabilistic programs, SIAM Journal of Computing 13 (1984) 292--314] presented a general method for proving properties of probabilistic programs, in which a probabilistic program is modeled by a Markov chain and an assertion on the output distribution is extended to an invariant assertion on all intermediate distributions. Their method is essentially a probabilistic generalization of the classical Floyd inductive assertion method. In this paper, we consider quantum programs modeled by quantum Markov chains which are defined by super-operators. It is shown that the Sharir-Pnueli-Hart method can be elegantly generalized to quantum programs by exploiting the Schr\"odinger-Heisenberg duality between quantum states and observables. In particular, a completeness theorem for the Sharir-Pnueli-Hart verification method of quantum programs is established.
+              - Sharir, Pnueli and Hart [M. Sharir, A. Pnueli, S. Hart, Verification of probabilistic programs, SIAM Journal of Computing 13 (1984) 292--314] presented a general method for proving properties of probabilistic programs, in which a probabilistic program is modeled by a Markov chain and an assertion on the output distribution is extended to an invariant assertion on all intermediate distributions. Their method is essentially a probabilistic generalization of the classical Floyd inductive assertion method. In this paper, we consider quantum programs modeled by quantum Markov chains which are defined by super-operators. It is shown that the Sharir-Pnueli-Hart method can be elegantly generalized to quantum programs by exploiting the Schr\"odinger-Heisenberg duality between quantum states and observables. In particular, a completeness theorem for the Sharir-Pnueli-Hart verification method of quantum programs is established.
 
-		- As indicated by the completeness theorem, the Sharir-Pnueli-Hart method is in principle effective for verifying all properties of quantum programs that can be expressed in terms of Hermitian operators (observables). But it is not feasible for many practical applications because of the complicated calculation involved in the verification. For the case of finite-dimensional state spaces, we find a method for verification of quantum programs much simpler than the Sharir-Pnueli-Hart method by employing the matrix representation of super-operators and Jordan decomposition of matrices. In particular, this method enables us to compute easily the average running time and to analyze some interesting long-run behaviors of quantum programs in a finite-dimensional state space.}
+              - As indicated by the completeness theorem, the Sharir-Pnueli-Hart method is in principle effective for verifying all properties of quantum programs that can be expressed in terms of Hermitian operators (observables). But it is not feasible for many practical applications because of the complicated calculation involved in the verification. For the case of finite-dimensional state spaces, we find a method for verification of quantum programs much simpler than the Sharir-Pnueli-Hart method by employing the matrix representation of super-operators and Jordan decomposition of matrices. In particular, this method enables us to compute easily the average running time and to analyze some interesting long-run behaviors of quantum programs in a finite-dimensional state space.}
 }
 
 @misc{Ying2014,
@@ -1572,22 +1553,7 @@ of computation by investigating variations on the algebraic theory.},
   numpages  = {15},
   doi       = {10.1145/3009837.3009840},
   url       = {https://opus.lib.uts.edu.au/bitstream/10453/127333/4/p818-ying.pdf},
-  abstract  = {Program invariant is a fundamental notion widely used in program verification and
-analysis. The aim of this paper is twofold: (i) find an appropriate definition of
-invariants for quantum programs; and (ii) develop an effective technique of invariant
-generation for verification and analysis of quantum programs.  Interestingly, the
-notion of invariant can be defined for quantum programs in two different ways -- additive
-invariants and multiplicative invariants -- corresponding to two interpretations of
-implication in a continuous valued logic: the Lukasiewicz implication and the Godel
-implication. It is shown that both of them can be used to establish partial correctness
-of quantum programs.  The problem of generating additive invariants of quantum programs
-is addressed by reducing it to an SDP (Semidefinite Programming) problem. This approach
-is applied with an SDP solver to generate invariants of two important quantum algorithms
--- quantum walk and quantum Metropolis sampling. Our examples show that the generated
-invariants can be used to verify correctness of these algorithms and are helpful in
-optimising quantum Metropolis sampling.  To our knowledge, this paper is the first
-attempt to define the notion of invariant and to develop a method of invariant generation
-for quantum programs.},
+  abstract  = {Program invariant is a fundamental notion widely used in program verification and analysis. The aim of this paper is twofold: (i) find an appropriate definition of invariants for quantum programs; and (ii) develop an effective technique of invariant generation for verification and analysis of quantum programs.  Interestingly, the notion of invariant can be defined for quantum programs in two different ways -- additive invariants and multiplicative invariants -- corresponding to two interpretations of implication in a continuous valued logic: the Lukasiewicz implication and the Godel implication. It is shown that both of them can be used to establish partial correctness of quantum programs.  The problem of generating additive invariants of quantum programs is addressed by reducing it to an SDP (Semidefinite Programming) problem. This approach is applied with an SDP solver to generate invariants of two important quantum algorithms -- quantum walk and quantum Metropolis sampling. Our examples show that the generated invariants can be used to verify correctness of these algorithms and are helpful in optimising quantum Metropolis sampling.  To our knowledge, this paper is the first attempt to define the notion of invariant and to develop a method of invariant generation for quantum programs.},
   keywords  = {Inductive assertions, Quantum programming, Partial correctness, Invariant generation, Program invariants}
 }
 
@@ -1626,16 +1592,7 @@ for quantum programs.},
   numpages  = {17},
   doi       = {10.1145/3453483.3454061},
   url       = {http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf},
-  abstract  = {In quantum computing, the basic unit of information is a qubit. Simulation of a general
-quantum program takes exponential time in the number of qubits, which makes simulation
-infeasible beyond 50 qubits on current supercomputers. So, for the understanding of
-larger programs, we turn to static techniques. In this paper, we present an abstract
-interpretation of quantum programs and we use it to automatically verify assertions
-in polynomial time. Our key insight is to let an abstract state be a tuple of projections.
-For such domains, we present abstraction and concretization functions that form a
-Galois connection and we use them to define abstract operations. Our experiments on
-a laptop have verified assertions about the Bernstein-Vazirani, GHZ, and Grover benchmarks
-with 300 qubits.},
+  abstract  = {In quantum computing, the basic unit of information is a qubit. Simulation of a general quantum program takes exponential time in the number of qubits, which makes simulation infeasible beyond 50 qubits on current supercomputers. So, for the understanding of larger programs, we turn to static techniques. In this paper, we present an abstract interpretation of quantum programs and we use it to automatically verify assertions in polynomial time. Our key insight is to let an abstract state be a tuple of projections. For such domains, we present abstraction and concretization functions that form a Galois connection and we use them to define abstract operations. Our experiments on a laptop have verified assertions about the Bernstein-Vazirani, GHZ, and Grover benchmarks with 300 qubits.},
   keywords  = {quantum programming, scalability, abstract interpretation}
 }
 
